@@ -1,3 +1,9 @@
+2006-04-20  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-settings-keyboard-xkb.c: fixed the libxklavier engine
+	initialization logic. Made the configuration error readable (bug
+	333091)
+
 2006-04-17  Ray Strode <rstrode@redhat.com>
 
 	* gnome-settings-mouse.c (configure_button_layout): fix
